--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
     "frameworks"
   ],
   "author": "wes.billman@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "commander": "^3.0.2",
+    "esm": "^3.2.25",
+    "js-yaml": "^3.13.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1"
+  }
 }
