--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
     "esm": "^3.2.25",
+    "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1"
   },
   "devDependencies": {
