--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "wes.billman@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.543.0",
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
     "esm": "^3.2.25",
     "fs-extra": "^8.1.0",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "mime": "^2.4.4"
   },
   "devDependencies": {
     "eslint": "^6.5.1"
