Working s3 upload and download

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
     "esm": "^3.2.25",
+    "execa": "^2.0.5",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
     "mime": "^2.4.4"
