--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "locker",
-  "version": "0.0.1",
+  "name": "@wesbillman/locker",
+  "version": "0.0.2",
   "description": "A nice place to store iOS frameworks",
-  "main": "index.js",
+  "main": "src/index.js",
+  "homepage": "https://github.com/wesbillman/locker",
+  "issues": {
+    "url": "https://github.com/wesbillman/locker/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wesbillman/locker.git"
+  },
   "scripts": {},
   "bin": {
     "locker": "bin/locker"
   },
   "keywords": [
-    "iOS",
-    "frameworks"
+    "locker",
+    "locker-cli",
+    "wesbillman",
+    "s3"
   ],
-  "author": "wes.billman@gmail.com",
+  "author": "wes@wesbillman.com",
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.543.0",
